- Fixed bottons spacing in problem set detail - fixed the mark correct button functionality in the problem grader - removed the hide hints column from the HmwK sets editor page.  Its not a traditional column (recently added), can still be changed by the problem set detail page, and I dont see why you need to know about it on that page.

--- a/htdocs/themes/math4/math4.css
+++ b/htdocs/themes/math4/math4.css
@@ -860,9 +860,8 @@ table#grades_table pre{
     height:auto;
 }
 
-#problem_set_form .btn {
-    margin-left:.5ex;
-    margin-right:.5ex;
+#problem_set_form input[type="submit"] {
+    margin-right:1ex;
 } 
 
 #mainform .btn,
